# glove

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CREDITS.md  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
dockerfiles/: Dockerfile.linux
docs/: architecture.md  future-work.md  quickstart.md  session-policy.md  threat-model.md
docs/prompts/: PROMPT-eng-codex.md
include/glove/: version.hpp
include/glove/audit/: audit_client.hpp  event.hpp  sink.hpp
include/glove/container/: digest.hpp  profile.hpp  receipt_chain.hpp  receipt_journal.hpp  receipt_producer.hpp  spawner.hpp
include/glove/control/: receipt_audit_protocol.hpp  receipt_audit_unix_server.hpp  session_registry.hpp
include/glove/kernel/: extension.hpp  mcp_extension.hpp  registry.hpp  server.hpp
include/glove/mcp/: client.hpp  lazy_init.hpp  messages.hpp  stdio_transport.hpp  testing.hpp  transport.hpp
include/glove/net/: egress_proxy.hpp
include/glove/policy/: decision.hpp  engine.hpp  policy_client.hpp
include/glove/reflect/: codegen.hpp
include/glove/run/: runner.hpp
include/glove/supervisor/: change_apply_authorization.hpp  change_apply_exchange.hpp  change_apply_gate.hpp  change_apply_journal.hpp  change_apply_receipt.hpp  change_apply_recovery.hpp  change_apply_trust_policy.hpp  change_manifest.hpp  library_bundle.hpp  linux_ephemeral_copy.hpp  linux_session_filesystem.hpp  path_alias.hpp  path_exposure.hpp  path_exposure_journal.hpp  session_plan.hpp
include/glove/term/: terminal.hpp
packaging/launchd/: org.sage-protocol.gloved.plist.in
packaging/systemd/: sage-gloved.service.in
scripts/: preflight.sh
src/: CMakeLists.txt  gloved_main.cpp  main.cpp
src/audit/: CMakeLists.txt  audit_client.cpp  jsonl_sink.cpp  memory_sink.cpp
src/container/: CMakeLists.txt  digest.cpp  output_pump.cpp  output_pump.hpp  profile.cpp  receipt_chain.cpp  receipt_journal.cpp  receipt_json.hpp  receipt_producer.cpp  resource_monitor.cpp  resource_monitor.hpp  sha256.cpp  sha256.hpp  synthetic_agent.cpp
src/container/linux/: cgroup_v2.cpp  cgroup_v2.hpp  clone_spawner.cpp  linux_managed_session.hpp  linux_resource_lifecycle.cpp  linux_resource_lifecycle.hpp  managed_launch_binding.cpp  pty_session_channel.cpp  pty_session_channel.hpp
src/container/macos/: sandbox_spawner.cpp
src/control/: CMakeLists.txt  linux_process_identity.cpp  linux_process_identity.hpp  linux_session_executor.cpp  linux_session_executor.hpp  linux_session_preparation.cpp  linux_session_preparation.hpp  linux_session_recovery.cpp  linux_session_recovery.hpp  receipt_audit_protocol.cpp  receipt_audit_unix_server.cpp  receipt_audit_unix_server_detail.hpp  receipt_audit_wire.hpp  session_reconciliation.cpp  session_reconciliation.hpp  session_registry.cpp
src/kernel/: CMakeLists.txt  mcp_extension.cpp  registry.cpp  server.cpp
src/mcp/: CMakeLists.txt  client.cpp  codec.cpp  codec.hpp  in_memory_transport.cpp  jsonrpc.hpp  jsonrpc_client.cpp  lazy_init.cpp  mcp_messages.hpp  stdio_transport.cpp
src/net/: CMakeLists.txt  egress_proxy.cpp
src/policy/: CMakeLists.txt  allow_list_engine.cpp  jsonpath_engine.cpp  policy_client.cpp
src/run/: CMakeLists.txt  runner.cpp
src/supervisor/: CMakeLists.txt  change_apply_authorization.cpp  change_apply_exchange.cpp  change_apply_gate.cpp  change_apply_journal.cpp  change_apply_receipt.cpp  change_apply_recovery.cpp  change_apply_trust_policy.cpp  change_manifest.cpp  library_bundle.cpp  path_alias.cpp  path_exposure.cpp  path_exposure_journal.cpp  path_exposure_policy.cpp  session_plan.cpp
src/supervisor/linux/: ephemeral_copy.cpp  persistent_quota_image.cpp  persistent_quota_image.hpp  session_filesystem.cpp
src/term/: CMakeLists.txt  factory.cpp  ghostty_terminal.cpp  null_terminal.cpp
tests/: CMakeLists.txt  smoke_test.cpp  thread_smoke_test.cpp
tests/audit/: audit_client_test.cpp  jsonl_sink_test.cpp
tests/container/: cgroup_probe_agent.cpp  linux_cgroup_v2_test.cpp  linux_exec_test.cpp  linux_launch_binding_test.cpp  linux_managed_session_test.cpp  linux_pty_session_channel_test.cpp  linux_resource_lifecycle_test.cpp  macos_exec_test.cpp  macos_sandbox_test.cpp  output_pump_test.cpp  profile_test.cpp  receipt_chain_test.cpp  receipt_journal_test.cpp  receipt_producer_test.cpp  resource_monitor_test.cpp  sha256_test.cpp  spawner_test.cpp
tests/control/: gloved_lifecycle_test.cpp  linux_process_identity_test.cpp  linux_session_executor_test.cpp  linux_session_preparation_test.cpp  receipt_audit_protocol_test.cpp  receipt_audit_server_fixture.cpp  receipt_audit_unix_server_test.cpp  session_registry_test.cpp
tests/kernel/: mcp_extension_test.cpp  mock_pair.hpp  registry_test.cpp  server_test.cpp
tests/mcp/: codec_test.cpp  initialize_test.cpp  jsonrpc_client_test.cpp  lazy_init_test.cpp  protocol_version_test.cpp  stdio_transport_cloexec_test.cpp  stdio_transport_frame_cap_test.cpp  stdio_transport_process_tree_test.cpp  stdio_transport_test.cpp  transport_round_trip_test.cpp  yams_annotations_test.cpp  yams_call_test.cpp  yams_smoke_test.cpp
tests/net/: egress_proxy_test.cpp
tests/policy/: engine_test.cpp  jsonpath_engine_test.cpp  policy_client_test.cpp
tests/reflect/: codegen_availability_test.cpp
tests/run/: glove_exec_audit_test.cpp  glove_exec_perimeter_test.cpp  glove_run_arg_rule_test.cpp  glove_run_yams_test.cpp
tests/supervisor/: change_apply_authorization_test.cpp  change_apply_exchange_test.cpp  change_apply_gate_test.cpp  change_apply_journal_test.cpp  change_apply_receipt_test.cpp  change_apply_recovery_test.cpp  change_apply_trust_policy_test.cpp  change_manifest_test.cpp  library_bundle_test.cpp  linux_ephemeral_copy_test.cpp  linux_session_filesystem_test.cpp  path_alias_test.cpp  path_exposure_journal_test.cpp  path_exposure_test.cpp  session_plan_test.cpp
